--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  @apply h-full;
+}
 #app {
   @apply bg-[#f5f5f5] w-full h-full flex flex-col justify-center items-center;
 }
